<?xml version="1.0" encoding="UTF-8"?>
<!-- vim: noexpandtab:ts=4:sw=4 -->
<!-- prevent vim geeks from destroying your whitespace -->

<!-- * Copyright (c) 2007 Encore Research Group, University of Toronto * 
	* This library is free software; you can redistribute it and/or * modify 
	it under the terms of the GNU Lesser General Public * License as published 
	by the Free Software Foundation; either * version 2.1 of the License, or 
	(at your option) any later version. * * This library is distributed in the 
	hope that it will be useful, * but WITHOUT ANY WARRANTY; without even the 
	implied warranty of * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. 
	See the GNU * Lesser General Public License for more details. * * You should 
	have received a copy of the GNU Lesser General Public * License along with 
	this library; if not, write to the Free Software * Foundation, Inc., 51 Franklin 
	Street, Fifth Floor, Boston, MA 02110-1301 USA -->
	
<!-- * Copyright (c) 2008-2014 Regents of the University of California (Regents). 
	Created * by TELS, Graduate School of Education, University of California 
	at Berkeley. * * This software is distributed under the GNU General Public 
	License, v3. * * Permission is hereby granted, without written agreement 
	and without license * or royalty fees, to use, copy, modify, and distribute 
	this software and its * documentation for any purpose, provided that the 
	above copyright notice and * the following two paragraphs appear in all copies 
	of this software. * * REGENTS SPECIFICALLY DISCLAIMS ANY WARRANTIES, INCLUDING, 
	BUT NOT LIMITED TO, * THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS 
	FOR A PARTICULAR * PURPOSE. THE SOFTWAREAND ACCOMPANYING DOCUMENTATION, IF 
	ANY, PROVIDED * HEREUNDER IS PROVIDED "AS IS". REGENTS HAS NO OBLIGATION 
	TO PROVIDE * MAINTENANCE, SUPPORT, UPDATES, ENHANCEMENTS, OR MODIFICATIONS. 
	* * IN NO EVENT SHALL REGENTS BE LIABLE TO ANY PARTY FOR DIRECT, INDIRECT, 
	* SPECIAL, INCIDENTAL, OR CONSEQUENTIAL DAMAGES, INCLUDING LOST PROFITS, 
	* ARISING OUT OF THE USE OF THIS SOFTWARE AND ITS DOCUMENTATION, EVEN IF 
	* REGENTS HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->

<!-- $Id$ -->

<project xmlns="http://maven.apache.org/POM/4.0.0" 
 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.wise</groupId>
	<artifactId>wise</artifactId>
	<packaging>war</packaging>
	<name>Web-based Inquiry Science Environment</name>
	<version>4.8</version>
	<url>http://wise4.org</url>
	<developers>
		<developer>
			<id>hiroki</id>
			<name>Hiroki Terashima</name>
			<email>honchikun@gmail.com</email>
			<organization>TELS</organization>
			<organizationUrl>
				http://www.telscenter.org/
			</organizationUrl>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>-8</timezone>
		</developer>
		<developer>
			<id>geoff</id>
			<name>Geoffrey Kwan</name>
			<email>geoffreykwan@gmail.com</email>
			<organization>TELS</organization>
			<organizationUrl>
				http://www.telscenter.org/
			</organizationUrl>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>-8</timezone>
		</developer>
		<developer>
			<id>jon</id>
			<name>Jonathan Breitbart</name>
			<email>breity10@gmail.com</email>
			<organization>TELS</organization>
			<organizationUrl>
				http://www.telscenter.org/
			</organizationUrl>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>-8</timezone>
		</developer>
	</developers>
	<scm>
		<url>https://github.com/WISE-Community/WISE/</url>
		<connection>scm:git:git://github.com/WISE-Community/WISE.git</connection>
		<developerConnection>scm:git:git://github.com/WISE-Community/WISE.git</developerConnection>
	</scm>
	<issueManagement>
		<system>GitHub Issues</system>
		<url>https://github.com/WISE-Community/WISE/issues</url>
	</issueManagement>

	<licenses>
		<license>
			<name>GNU General Public License (GPL)</name>
			<url>http://www.gnu.org/licenses/gpl.html</url>
		</license>
	</licenses>

	<build>
		<testResources testOutputDirectory="${project.build.outputDirectory}">
			<testResource>
				<filtering>true</filtering>
				<directory>src/test/resources</directory>
			</testResource>
		</testResources>
		<finalName>wise</finalName>
		<plugins>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.5</version>
				<configuration>
					<skipTests>true</skipTests>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<executions>
					<execution>
						<id>default-testCompile</id>
						<phase>test-compile</phase>
						<goals>
							<goal>testCompile</goal>
						</goals>
						<configuration>
							<skip>true</skip>
						</configuration>
					</execution>
				</executions>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<skipTests>true</skipTests>
					<forkMode>once</forkMode>
					<excludes>
						<exclude>**/AllTests.java</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-war-plugin</artifactId>
				<configuration>
					<skipTests>true</skipTests>
					<!-- NP: not sure where this variable was supposed to be defined, but 
						its not -->
					<!-- which is fine, because the default value does the right thing in 
						our case -->
					<!-- <webappDirectory>${maven.war.portal.webappDirectory}</webappDirectory> -->
					<webResources>
						<resource>
							<!-- this is relative to the pom.xml directory -->
							<directory>
								src/main/webapp/WEB-INF
							</directory>
							<!-- enable filtering -->
							<filtering>true</filtering>
							<includes>
								<include>web.xml</include>
							</includes>
							<!-- override the destination directory for this resource -->
							<targetPath>WEB-INF</targetPath>
						</resource>
						<resource>
							<directory>.</directory>
							<includes>
								<include>LICENSE.txt</include>
							</includes>
							<targetPath>META-INF</targetPath>
						</resource>
					</webResources>
					<packagingExcludes>
					        WEB-INF/classes/sample/**,
						WEB-INF/classes/wise.properties,
						WEB-INF/classes/wise_development.properties,
						curriculum/**,
						studentuploads/**
					</packagingExcludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.tomcat.maven</groupId>
				<artifactId>tomcat7-maven-plugin</artifactId>
				<version>2.2</version>
				<configuration>
					<!-- http port -->
					<port>8080</port>
					<!-- application path always starts with / -->
					<path>/${project.build.finalName}</path>
					<systemProperties>
	                    <JAVA_OPTS>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</JAVA_OPTS>					
					</systemProperties>
					<useTestClasspath>false</useTestClasspath>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.2.1</version>
				<executions>
					<execution>
						<goals>
							<goal>java</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<executable>java</executable>
					<mainClass>org.wise.WISE</mainClass>
					<includePluginDependencies>true</includePluginDependencies>
					<classpathScope>compile</classpathScope>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.9</version>
				<configuration>
					<skipTests>true</skipTests>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>eclipse-repo</id>
			<name>oaw-eclipse-repo</name>
			<url>http://www.openarchitectureware.org/m2</url>
		</repository>
		<repository>
			<id>concord-repo-internal-snapshot</id>
			<name>concord internal repository snapshot</name>
			<url>
				http://source.concord.org/maven2/internal_snapshot/
			</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>java.net-maven2-repository</id>
			<name>javanettasks maven repository</name>
			<url>		
						 http://download.java.net/maven/2
			</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>jboss-maven2-repository</id>
			<name>jboss maven repository</name>
			<url>		
						 http://repository.jboss.org/maven2
			</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>JBoss</id>
			<name>JBoss repository</name>
			<url>http://repository.jboss.org/nexus/content/groups/public-jboss</url>
		</repository>
		<repository>
			<id>repo1.maven.org</id>
			<url>http://repo1.maven.org/maven2/</url>
		</repository>
		<repository>
			<id>concord-jnlp</id>
			<url>http://jnlp.concord.org/dev/</url>
		</repository>
		<!-- NP: 2012.02.02 - couldn't find tomcat maven plugin -->
		<!-- see: http://bit.ly/zd5Jv9 -->
		<repository>
			<id>app-fuse</id>
			<url>http://static.appfuse.org/repository/</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots />
			<id>Codehause Snapshots</id>
			<url>https://nexus.codehaus.org/content/repositories/codehaus-snapshots</url>
		</pluginRepository>
	</pluginRepositories>
	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.5.2</version>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>2.4</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.persistence</groupId>
			<artifactId>persistence-api</artifactId>
			<version>1.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-mock</artifactId>
			<version>2.0.5</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.easymock</groupId>
			<artifactId>easymock</artifactId>
			<version>2.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>${org.springframework.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-jdbc</artifactId>
			<version>${org.springframework.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aspects</artifactId>
			<version>${org.springframework.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aop</artifactId>
			<version>${org.springframework.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-orm</artifactId>
			<version>${org.springframework.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${org.springframework.version}</version>
		</dependency>
		<dependency>
    		<groupId>org.springframework</groupId>
    		<artifactId>spring-context-support</artifactId>
    		<version>${org.springframework.version}</version>
		</dependency>		
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-acl</artifactId>
			<version>${org.springframework.security.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-core</artifactId>
			<version>${org.springframework.security.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-config</artifactId>
			<version>${org.springframework.security.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-core-tiger</artifactId>
			<version>2.0.7.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-taglibs</artifactId>
			<version>${org.springframework.security.version}</version>
		</dependency>
		<dependency>
			<groupId>org.hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
			<version>2.3.2</version>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.30</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-commons-annotations</artifactId>
			<version>3.1.0.GA</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate</artifactId>
			<version>3.2.6.ga</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-annotations</artifactId>
			<version>3.4.0.GA</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-c3p0</artifactId>
			<version>4.2.7.Final</version>
		</dependency>
		<dependency>
			<groupId>net.sf.ehcache</groupId>
			<artifactId>ehcache</artifactId>
			<version>2.8.2</version>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
			<version>1.1.2</version>
		</dependency>
		<dependency>
			<groupId>taglibs</groupId>
			<artifactId>standard</artifactId>
			<version>1.1.2</version>
		</dependency>
		<dependency>
			<groupId>commons-httpclient</groupId>
			<artifactId>commons-httpclient</artifactId>
			<version>3.0.1</version>
		</dependency>
		<dependency>
			<groupId>commons-fileupload</groupId>
			<artifactId>commons-fileupload</artifactId>
			<version>1.3.1</version>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.2</version>
		</dependency>
		<dependency>
			<groupId>com.ibm.icu</groupId>
			<artifactId>icu4j</artifactId>
			<version>49.1</version>
		</dependency>
		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>mail</artifactId>
			<version>1.4.7</version>
		</dependency>
		<dependency>
			<groupId>net.tanesha.recaptcha4j</groupId>
			<artifactId>recaptcha4j</artifactId>
			<version>0.0.7</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>3.7</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>3.7</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml-schemas</artifactId>
			<version>3.7</version>
		</dependency>
		<dependency>
			<groupId>org.apache.tomcat</groupId>
			<artifactId>tomcat-catalina</artifactId>
			<version>7.0.32</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.tomcat</groupId>
			<artifactId>tomcat-coyote</artifactId>
			<version>7.0.32</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>net.sf.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>2.3</version>
		</dependency>
		<dependency>
			<groupId>com.yahoo.platform.yui</groupId>
			<artifactId>yuicompressor</artifactId>
			<version>2.4.6</version>
		</dependency>
	</dependencies>
	<reporting>
		<plugins>
			<plugin>
				<artifactId>maven-surefire-report-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.9</version>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>2.0-SNAPSHOT</version>
			</plugin>
		</plugins>
	</reporting>
	<properties>
		<org.springframework.version>3.2.9.RELEASE</org.springframework.version>
		<org.springframework.security.version>3.2.4.RELEASE</org.springframework.security.version>
		<startup.listeners>
		</startup.listeners>
	</properties>
</project>
